<resources>
    <string name="app_name">Vinaigrette</string>

    <string name="youtube_api_key">AIzaSyBXIkt2yT92DWzjRLs3n9oPcd2B7iKRzfs</string>

    // NETWORK ERROR
    <string name="er_title_def">Внимание !</string>
    <string name="er_message">Ошибка в тексте сообщения сервера</string>
    <string name="er_connect_title">Отсутствует интернет</string>
    <string name="er_connect">Проверьте ваш доступ к WI-FI или настройки мобильного соединения</string>
    <string name="er_timeout">Долго не приходит ответ с сервера</string>
    <string name="er_server_error">Ошибка сервера</string>
    <string name="er_json_syntax">Синтаксическая ошибка в json</string>
    <string name="er_no_auth">Этот функционал доступен авторизованному пользователю. Авторизуйтесь</string>

    // Error text
    <string name="er_filled">Нужно заполнить</string>
    <string name="er_lenght">Количество знаков в поле\u0020</string>
    <string name="attention">Внимание</string>
    <string name="finishOk">Вы хотите выйти из приложения?</string>
    <string name="error_ed">Ошибка</string>

    <string name="contin">Продолжить</string>
    <string name="skip">Пропустить знакомство</string>
    <string name="proceed">Приступить</string>

    <!--<string name="json_tutorial">[{\"text\":\"Талоны дешевле на 12%, чем на АЗС\",\"img\":\"tutorial_1\",\"skip\":\"Пропустить знакомство\",\"contin\":\"Продолжить\",\"proceed\":\"\"},-->
        <!--{\"text\":\"Электронные талоны всегда с собой\",\"img\":\"tutorial_2\",\"skip\":\"Пропустить знакомство\",\"contin\":\"Продолжить\",\"proceed\":\"\"},-->
        <!--{\"text\":\"Становитесь агентом и зарабатывайте\",\"img\":\"tutorial_3\",\"skip\":\"Пропустить знакомство\",\"contin\":\"Продолжить\",\"proceed\":\"\"},-->
        <!--{\"text\":\"Навигатор укажет путь к ближайшей заправке\",\"img\":\"tutorial_4\",\"skip\":\"\",\"contin\":\"\",\"proceed\":\"Приступить\"}]</string>-->

    <string name="json_tutorial">[{\"text\":\"Талоны дешевле на 12%, чем на АЗС\",\"img\":\"tutorial_1\"},
        {\"text\":\"Электронные талоны всегда с собой\",\"img\":\"tutorial_2\"},
        {\"text\":\"Становитесь агентом и зарабатывайте\",\"img\":\"tutorial_3\"},
        {\"text\":\"Навигатор укажет путь к ближайшей заправке\",\"img\":\"tutorial_4\"}]</string>

// Fitness
    <string name="clubs">[{\"clubId\":\"1\",\"club_name\":\"Клуб 1\"},{\"clubId\":\"2\",\"club_name\":\"Клуб 2\"}]</string>
    <string name="fitness">Фитнес</string>
    <string name="ok">Вы записаны на выбранное Вами время</string>
    <string-array name="mes">
        <item>Январь</item>
        <item>Февраль</item>
        <item>Март</item>
        <item>Апрель</item>
        <item>Май</item>
        <item>Июнь</item>
        <item>Июль</item>
        <item>Август</item>
        <item>Сентябрь</item>
        <item>Октябрь</item>
        <item>Ноябрь</item>
        <item>Декабрь</item>
    </string-array>

    // AUTH
    <string name="number_phone">Номер телефона</string>
    <string name="auth">Авторизация</string>
    <string name="register">Регистрация</string>
    <string name="enter">Войти</string>
    <string name="enter_skip">Войти без авторизации</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="source_photo">Выбери источник</string>

    <string name="surname_z">Фамилия</string>
    <string name="name_z">Имя</string>
    <string name="patronymic_z">Отчество</string>
    <string name="your_phone_z">Ваш телефон</string>
    <string name="email_z">Email</string>

// MENU
    <string name="exit">Выйти</string>
    <string name="m_catalog">Каталог</string>
    <string name="m_orders">Заказы</string>
    <string name="m_settings">Настройки</string>
    <string name="m_test">TEST</string>

// PRODUCT
    <string name="search">Поиск</string>
    <string name="add">Добавить</string>
    <string name="oem">ОЕМ</string>
    <string name="code">Код\u0020</string>
    <string-array name="descript_tab_name">
        <item>Описание</item>
        <item>Характеристки</item>
    </string-array>

    <string name="from">С</string>
    <string name="before">По</string>

    <string name="analog">Аналоги</string>
    <string name="not_analog">Аналогов нет</string>
    <string name="count">Количество</string>
    <string name="price">Цена</string>
    <string name="sum">Сумма</string>
    <string name="create_new">Создать новый</string>
    <string name="product_add_in_order">Товар добавлен в заказ\u0020</string>

    <string name="remainder">Остаток</string>
    <string name="more_residue">Внимание! Заказываемое количество, превышает доступные остатки. Недостающее количество будет зарезервировано и поставлено. Возможно изменение стоимости в связи с изменением цены поступления.</string>
    <string name="no_data_order">Нет открытых заказов. Для созданияя заказа нажмите кнопку \"Создать новый\"</string>
    <string name="no_data_order_1">Нет открытых заказов.</string>

// BARCODE scanner
    <string name="barcode_place">Поместите штрихкод в поле</string>
    <string name="barcode_scan">Применить</string>
    <string name="repeat">Повторить</string>
    <string name="search_barcode">Поиск по штрихкоду</string>

// PROFILE
    <string name="profile">Профиль</string>
    <string name="profile_send">Отправить</string>

    <string name="news_events">Новости, мероприятия</string>
    <string name="setting">Настройки</string>

// NEWS
    <string-array name="news_event">
        <item>Новости</item>
        <item>Мероприятия</item>
    </string-array>

    <string name="anim">Кастомный компонент, анимация</string>
    <string name="tool">Tool Bar</string>

</resources>
