<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="310dp"
    android:layout_height="304dp"
    android:background="@color/white">

    <View
        android:layout_width="@dimen/pad_8"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:background="@color/gray" />

    <ImageView
        android:id="@+id/picture"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/pad_4" />

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/pad_10"
        android:layout_marginLeft="@dimen/pad_22"
        android:gravity="center_vertical"
        android:layout_below="@+id/picture"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/st_12_black_50"
            android:text="@string/code"/>

        <TextView
            android:id="@+id/product_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/st_12_black_50"/>

        <View
            android:layout_width="@dimen/pad_1"
            android:layout_height="@dimen/pad_16"
            android:background="@color/black_30"
            android:layout_marginLeft="@dimen/pad_8"
            android:layout_marginRight="@dimen/pad_8"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/st_12_black_50"
            android:text="@string/oem"/>
        <TextView
            android:id="@+id/oem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/pad_6"
            style="@style/st_12_black_50"/>
    </LinearLayout>

    <TextView
        android:id="@+id/product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/st_16_black"
        android:layout_below="@+id/ll"
        android:layout_marginTop="@dimen/pad_12"
        android:layout_marginLeft="@dimen/pad_22"
        android:layout_marginRight="@dimen/pad_30"/>

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_name"
        android:layout_marginTop="@dimen/pad_20"
        android:layout_marginLeft="@dimen/pad_22"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/add"
        style="@style/st_button_1"
        android:layout_width="@dimen/pad_120"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/product_name"
        android:layout_marginLeft="@dimen/pad_36"
        android:layout_marginRight="@dimen/pad_30"
        android:layout_marginTop="@dimen/pad_10"
        android:letterSpacing="0.14"
        android:text="@string/add" />
</RelativeLayout>