<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/h_header"
        android:background="@color/primary">

        <ImageView
            android:id="@+id/back"
            android:layout_width="@dimen/h_header"
            android:layout_height="@dimen/h_header"
            android:padding="@dimen/pad_12"
            android:src="@drawable/menu" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginStart="@dimen/pad_72"
            android:text="@string/m_orders" />
        />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/dat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tool"
        android:background="@color/white"
        android:paddingTop="@dimen/pad_6"
        android:paddingBottom="@dimen/pad_6"
        android:paddingLeft="@dimen/h_bottom"
        android:paddingRight="@dimen/h_bottom"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/pad_24"
                style="@style/st_14_black"
                android:text="@string/from"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/pad_4"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/from"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    style="@style/st_16_black"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/pad_1"
                    android:background="@color/black_30"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/pad_24"
                style="@style/st_14_black"
                android:text="@string/before"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/pad_4"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/before"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    style="@style/st_16_black"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/pad_1"
                    android:background="@color/black_30"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingRight="@dimen/pad_8"
            android:paddingLeft="@dimen/pad_8"
            android:background="@color/gray"/>
        <TextView
            android:id="@+id/no_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/st_16_black"
            android:gravity="center"
            android:layout_marginRight="@dimen/pad_24"
            android:layout_marginLeft="@dimen/pad_24"
            android:text="@string/no_data_order_1"
            android:visibility="gone"/>

        <com.dpcsa.compon.custom_components.DateDiapason
            android:id="@+id/diapason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="@dimen/pad_24"
            android:background="@color/white"
            app:viewFrom="@+id/from"
            app:viewBefore="@+id/before"
            app:countMonthLeft="7"
            app:countMonthRight="3"
            app:formatDate="dd.MM.yyyy"
            app:colorSelectTint="@color/accent"
            app:colorCurrentTint="@color/blue"
            android:visibility="gone"/>
    </RelativeLayout>
</LinearLayout>